Sandboxed URL creation to prevent SSRF attacks